# LearningNotes

./: .gitignore  README.md
AlgorithmNotes/: CMakeLists.txt  README.md
AlgorithmNotes/AlgorithmOverview/: README.md
AlgorithmNotes/DynamicProgramming/: CircuitWiring.cpp  FlowShop.cpp  ImageCompress.cpp  Knapsack.cpp  LongestCommonSubsequence.cpp  MatrixChain.cpp  MaximumFieldAnd.cpp  MinWeightTriangulation.cpp  OptimalBinarySearchTree.cpp  PolygonMaxima.cpp  README.md  matrixChain.cpp
AlgorithmNotes/GreedyAlgorithm/: GreedySelector.cpp  HuffmanCoding.cpp  KnapsackProblem.cpp  OptimalLoading.cpp  README.md
AlgorithmNotes/RecursionPartition/: BigNumMultiply.cpp  BinarySearch.cpp  ChessBoard.cpp  Divide.cpp  Factorial.cpp  Fibonacci.cpp  MergeSort.cpp  Perm.cpp  README.md  StrassenMatrixMultiply.cpp  chessBoard.cpp  closestPair.cpp  divide.cpp  hanoi.cpp  kSmallestElement.cpp  mergeSort.cpp  quickSort.cpp  schedule.cpp
CPP/: README.md
CSharp/: README.md
ComputerNetwork/: README.md
ConfigFIle/: .ideavimrc  FavianAndroidApkKey.jks  TrafficMonitor_config.rar  settings_133609429471403286.ptb  settings_133635380348912696.ptb  settings_133790747473751607.ptb  暂停Windows更新至2099年.bat
DataStructure/: README.md
English/: README.md  Vocabularies.xlsx
FlexLayout/: README.md
HTMLCSS/CSSDEMO/: Summary.txt  Switch(仿FLyme).html  loading(小球加载动画).html  七彩圆环loading.html  云朵-下雨.html  列表滑块动效.html  动画模拟时钟.html  圆环旋转动效.html  水流加载动画.html  水滴效果.html  滑动悬停按钮.html  灯光开关.html  简单星空效果.html  绘制三角形(扇形、环形).html  进度条流动动画.html  魔力弹簧Loading.html
HTMLCSS/CSSDEMO/solarStarts/: solar.css  y.html
HTMLCSS/HTMLNotes/BoxModel/: I-test.html  Summary05.txt  example01.html  example02.html  example03.html  example04.html  example05.html  example06.html  example07.html  example08.html  example09(radius).html  example10.html  example11.html  example12.html  example13(径向渐变).html  example14.html  example15.html  example16.html  example17.html  example20.html  example21.html  example22.html  style05.css  test.css  test.html
HTMLCSS/HTMLNotes/CSSBasic/: Summary03.txt  example01.html  example02.html  example03.html  example04.html  example05(font属性).html  example06.html  example07.html  example08.html  example09(文本装饰text-decoration和文本转换text-transform).html  example10.html  example11(white-space).html  example12.html  example13.html  example14(break-words).html  example15.html  example16.html  example17.html  example18.html  example19.html  example20.html  style.css
HTMLCSS/HTMLNotes/CSSSelectot/: Summary.css  Summary.html  Summary04.txt  example01.html  example02.html  example03.html  example04(子选择器).html  example05(临近兄弟).html  example06(普通兄弟).html  example07(：root选择器).html  example08(not选择器).html  example09(only-child选择器).html  example10(first-child和last-child选择器).html  example11(nth-child(n)和nth-last-child(n)选择器).html  example13(empty选择器).html  example15(after选择器).html  (+5 more)
Java/DesignPattern/: pom.xml
Java/Flowable/: README.md
Java/Maven/: README.md
Java/OOPNotes/: pom.xml
Java/Redis/: README.md
Java/ReflectionAnnotation/: README.md  pom.xml
Java/SpringBoot/: README.md
Java/SpringBootAndMP/: pom.xml
Java/SpringCloud/: README.md
LinearAlgebra/: README.md
Linux/: README.md
Math/: README.md
ProbabilityTheoryMathematicalStatistics/: README.md
Python/: README.md
PytorchNotes/: CodeTest.py  README.md  Utils.py
PytorchNotes/ComputerVision/: BuildBaselineModel.py  BuildCNNModel.py  BuildNonLinearModel.py  DataPrepare.py  GetDataSet.py  OperateModel.py  PredicteEvaluate.py  TrainBaselineModel.py  TrainCNNModel.py  TrainNonLinearModel.py
PytorchNotes/CustomDataSets/: BuildTinyVGGModel.py  DataEnhance.py  DataLoadByImageFolder.py  DataLoadCustom.py  DataTransform.py  GetDataSets.py  MakePredict.py  OperateModel.py  TrainVGGModel.py
PytorchNotes/Fundamentals/: TensorAggregation.py  TensorBasic.py  TensorInfo.py  TensorNumpy.py  TensorOnGPU.py
PytorchNotes/NeuralNetworkClassification/: BuildModel.py  BuildNonLinearModel.py  DataPrepare.py  MultipleClassification.py  TrainModel.py  TrainNonLinearModel.py
PytorchNotes/TransferLearning/: DataPrepare.py  ModelTransfer.py  TrainModel.py
PytorchNotes/Workflows/: BuildModel.py  DataPrepare.py  EvaluateModel.py  ModelOnGPU.py  SaveLoadModel.py  TrainModel.py
SVN/: README.md
SoftwareEngineering/: README.md
TypeScript/: README.md
Unity/TankDefense/: .editorconfig  Assembly-CSharp.csproj  TankDefense.sln
VimNotes/: README.md  _vimrc
Vim_Notes/: README.md
(+186 files in other folders)
