cmake_minimum_required(VERSION 3.19)
project(AlgorithmNotes)

set(CMAKE_CXX_STANDARD 17)

# 2.RecursionPartition chapter
add_executable(Factorial RecursionPartition/Factorial.cpp)
add_executable(Fibonacci RecursionPartition/Fibonacci.cpp)
add_executable(Perm RecursionPartition/Perm.cpp)
add_executable(divide RecursionPartition/Divide.cpp)
add_executable(hanoi RecursionPartition/Hanoi.cpp)
add_executable(binarySearch RecursionPartition/BinarySearch.cpp)
add_executable(bigNumMultiply RecursionPartition/BigNumMultiply.cpp)
add_executable(strassenMatrixMultiply RecursionPartition/StrassenMatrixMultiply.cpp)
add_executable(chessBoard RecursionPartition/ChessBoard.cpp)
add_executable(mergeSort RecursionPartition/MergeSort.cpp)
add_executable(quickSort RecursionPartition/QuickSort.cpp)
add_executable(kSmallestElement RecursionPartition/KSmallestElement.cpp)
add_executable(closestPair RecursionPartition/ClosestPair.cpp)
add_executable(schedule RecursionPartition/Schedule.cpp)

# 3. DynamicProgramming chapter
add_executable(matrixChain DynamicProgramming/MatrixChain.cpp)
add_executable(longestCommonSubsequence DynamicProgramming/LongestCommonSubsequence.cpp)
add_executable(MaximumFieldAnd DynamicProgramming/MaximumFieldAnd.cpp)
add_executable(MinWeightTriangulation DynamicProgramming/MinWeightTriangulation.cpp)
add_executable(PolygonMaxima DynamicProgramming/PolygonMaxima.cpp)
add_executable(ImageCompress DynamicProgramming/ImageCompress.cpp)
add_executable(CircuitWiring DynamicProgramming/CircuitWiring.cpp)
add_executable(FlowShop DynamicProgramming/FlowShop.cpp)
add_executable(Knapsack DynamicProgramming/0-1KnapsackProblem.cpp)
add_executable(OptimalBinarySearchTree DynamicProgramming/OptimalBinarySearchTree.cpp)

# 4. GreedyAlgorithm  chapter
add_executable(GreedySelector GreedyAlgorithm/GreedySelector.cpp)
add_executable(KnapsackProblem GreedyAlgorithm/KnapsackProblem.cpp)
add_executable(OptimalLoading GreedyAlgorithm/OptimalLoading.cpp)
add_executable(HuffmanCoding GreedyAlgorithm/HuffmanCoding.cpp)